<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dram_plan</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="usern@todo.todo">usern</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclpy</depend>
  <depend>setuptools</depend>
  <depend>visualization_msgs</depend>
  <exec_depend>rmf_building_map_msgs</exec_depend>
  <exec_depend>rmf_fleet_msgs</exec_depend>
  <exec_depend>dram_interface</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
